修复UI issue on Firefox browser #6

--- a/src/static/css/swap.less
+++ b/src/static/css/swap.less
@@ -78,7 +78,7 @@
         font-weight: bold;
         color: var(--primary-text);
         line-height: 24px;
-        ;
+        width: 80%;/*解决单位超出范围BUG*/
       }
 
       .token-box {
